# monorepo

./: .gitignore  COPYING.md  build-frontend.ps1
.github/workflows/: firmware-build.yml  frontend-build.yml
cad/: Axle Screw.ipt  Bearing.ipt  Bearing2.iam  Belt Clip.ipt  Belt.ipt  Button Bracket 1.ipt  Button Bracket 2.ipt  Button.ipt  Curtain Opener.ipn  Free HTD 5M Sprocket.ipt  Free Sprocket Holder Body.ipt  Free Sprocket Holder.iam  Locked HTD 5M Sprocket.ipt  Main Rail.ipt  Pulley_T-MXL-XL-HTD-GT2_N-tooth.scad  SM-S4303R.ipt  Secondary Rail.ipt  Servo Horn.ipt  Stand 1.ipt  Stand 2.ipt  Stand Base.ipt  Upper Stand Bracket.ipt
frontend/: CMakeLists.txt  Cargo.toml  Trunk.toml  app.scss  index.html  rust-toolchain.toml  shell.nix  swagger.yaml
frontend/src/: api.rs  main.rs  template.rs  web.rs
frontend/src/pages/: configuration.rs  configuration_completed.rs  connecting.rs  home.rs  mod.rs
server/: .clang-tidy  .gitignore  CMakeLists.txt  partitions.csv  platformio.ini  sdkconfig.esp32-s3-devkitc-1  sdkconfig.esp32-s3-devkitc-1.old
server/data/public/: index.html
server/src/: CMakeLists.txt  common.cpp  common.h  config.cpp  config.h  curtain.cpp  curtain.h  idf_component.yml  main.cpp  server.cpp  server.h  wifi.cpp  wifi.h
